# BackEnd_FastAPI

./: .gitignore
EventPlanner/: pyproject.toml
EventPlanner/src/: main.py
EventPlanner/src/NonCommit/: password.py
EventPlanner/src/database/: connection.py
EventPlanner/src/models/: events.py  users.py
EventPlanner/src/routes/: events.py  users.py
First_Project/: pyproject.toml
First_Project/src/: api.py
First_Project/src/model/: model.py
First_Project/src/templates/: home.html  todo.html
First_Project/src/todos/: todo.py
