[project]
name = "eventplanner"
version = "0.1.0"
description = ""
authors = [
    {name = "al0214",email = "sisang951@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.sqlEnv.dependencies]
python-multipart = ">=0.0.20,<0.0.21"
pydantic = { version = ">=2.11.7,<3.0.0", extras = ["email"] }

[tool.poetry.group.mongoEnv.dependencies]
beanie = ">=2.0.0"
motor = ">=3.7.1,<4.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
